spacing fixed with CSS

--- a/packages/insight-previous/src/app/app.scss
+++ b/packages/insight-previous/src/app/app.scss
@@ -128,6 +128,10 @@ ion-footer{
     height: 100%;
   }
 }
+
+.menu-icons{
+  padding-right: 1rem;
+}
 // Shared Sass variables, which can be used to adjust Ionic's
 // default Sass variables, belong in "theme/variables.scss".
 //
